runtime/tests/cases/syntax/errors/set_missing_value.bobbin
temp foo = 1
set foo =
